--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
+    "file-saver": "^2.0.5",
     "fullcalendar": "^5.11.0",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.5.25",
     "moment": "^2.29.3",
     "primeflex": "^3.2.1",
     "primeicons": "^5.0.0",
@@ -23,7 +26,8 @@
     "react-transition-group": "^4.4.2",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "xlsx": "^0.18.5"
   },
   "scripts": {
     "start": "react-scripts start",
